--- a/Kalkulator walutowy.html
+++ b/Kalkulator walutowy.html
@@ -42,7 +42,7 @@
                     </label>
                     <select class="form__field js-outputCurrency">
                         <option value="PLN">PLN - polski złoty</option>
-                        <option value="EUR">EUR - euro</option>
+                        <option value="EUR" autofocus>EUR - euro</option>
                         <option value="USD">USD - dolar amerykański</option>
                     </select>
 
