Changed class for BEM standard

--- a/Strona o mnie.html
+++ b/Strona o mnie.html
@@ -11,6 +11,7 @@
         crossorigin="anonymous" />
     <link href="css/style.css" rel="stylesheet">
     <link href="css/header.css" rel="stylesheet">
+    <link href="css/sections.css" rel="stylesheet">
     <link href="css/navigation.css" rel="stylesheet">
     <link href="css/table.css" rel="stylesheet">
     <link href="css/footer.css" rel="stylesheet">
@@ -142,8 +143,8 @@
                     Dysk jest rzucany ze specjalnie wyznaczonej strefy rzutu (tzw. „tee”) w kierunku kosza (tzw. „hole”
                     lub „dołek”). Dołek może być – i zazwyczaj jest – jednym z wielu discgolfowych koszy, które
                     wyglądają tak:</p>
-                <div class="subHeader">
-                    <img class="subHeader" width="400" src="https://imgupload.pl/images/2022/11/16/discgolfbasket.jpg"
+                <div class="subHeader__imageContainer">
+                    <img class="subHeader__image" width="400" src="https://imgupload.pl/images/2022/11/16/discgolfbasket.jpg"
                         alt="discgolfbasket">
                 </div>
                 <p class="text">W trakcie gry – zanim gracz zaliczy kolejny dołek, każdy kolejny rzut rozpoczyna
@@ -180,15 +181,15 @@
                     dystansów. Jego budowa zapewnia szybkość i pokonywanie oporów powietrza podczas lotu. Wśród tej
                     grupy można podzielić dyski na <i>fairway driver</i> oraz <i>distance driver</i>.</p>
                 <p class="text">Profile dysków i ich przykładowe zdjęcia:</p>
-                <div class="subHeader">
+                <div class="subHeader__imageContainer">
                     <img class="subHeader__image" width="700"
                         src="https://imgupload.pl/images/2022/11/16/discgolf-for-beginners.jpg" alt="discprofile">
                 </div>
-                <div class="subHeader">
+                <div class="subHeader__imageContainer">
                     <img class="subHeader__image" width="700" src="https://imgupload.pl/images/2022/11/16/discs.jpg" alt="discs">
                 </div>
                 <h4 class="subSubSection">Co oznaczają cyfry na dysku?</h4>
-                <div class="subHeader">
+                <div class="subHeader__imageContainer">
                     <img class="subHeader__image" width="920" src="https://imgupload.pl/images/2022/11/16/discnumber.jpg"
                         alt="discnumber">
                     <p class="text">Są to parametry określające zachowanie się dysku w powietrzu oraz podpowiadające
@@ -217,7 +218,7 @@
                         5 będą miały ostry, pionowy finisz w lewo (w przypadku rzutu praworęcznym backhandem).</p>
                     <p class="text">Podsumowując, cyfry umieszczone na dysku lub w opisie dysku w sklepie, oznaczają:
                     </p>
-                    <div class="subHeader">
+                    <div class="subHeader__imageContainer">
                         <img class="subHeader__image" width="600" src="https://imgupload.pl/images/2022/11/16/discparametr.jpg"
                             alt="parametrydisc">
                     </div>
