--- a/Strona o mnie.html
+++ b/Strona o mnie.html
@@ -34,28 +34,30 @@
         <header class="header">
             <h1 class="header__name">Paweł Kotlarek</h1>
             <div class="header__imageContainer">
-                <img class="header__image" width="300" src="https://imgupload.pl/images/2022/06/08/my2.jpg" alt="with my wife">
+                <img class="header__image" width="300" src="https://imgupload.pl/images/2022/06/08/my2.jpg"
+                    alt="with my wife">
             </div>
             <p>
                 <button class="header__button js-removeImageButton">Usuń zdjęcie</button>
             </p>
         </header>
         <article>
-            <section id="o-mnie">
-                <h2 class="section">Kilka słów o mnie</h2>
+            <section class="section" id="o-mnie">
+                <h2 class="section__header">Kilka słów o mnie</h2>
 
-                <p class="text"> Nie jestem ideałem, choć nie ukrywam, że fajnie by było nim być 😅 Staram się być dobry
+                <p class="section__text"> Nie jestem ideałem, choć nie ukrywam, że fajnie by było nim być 😅 Staram się być dobry
                     dla wszystkich, bo to dobro zawsze wraca. Jestem dość spokojny, ale miewam gorsze dni jak każdy.
                     Bardzo Lubię rozmawiać, pomagać innym, niekoniecznie licząc na odwzajemnienie.</p>
             </section>
-            <section id="zainteresowania">
-                <h2 class="section">Zainteresowania</h2>
-                <h3 class="subSection">Sport - Piłka nożna</h3>
-                <p class="text">Od dziecka aktywność była dla mnie czymś naturalnym. Od dziecka interesuję się piłką nożną, ale na chwilę obecną wyłącznie jako kibic zza
-                    ekranu telewizora, oglądając swoją ulubioną <span class="important"><strong>FC Barcelonę
+            <section class="section" id="zainteresowania">
+                <h2 class="section__header">Zainteresowania</h2>
+                <h3 class="section__subHeader">Sport - Piłka nożna</h3>
+                <p class="section__text">Od dziecka aktywność była dla mnie czymś naturalnym. Od dziecka interesuję się piłką
+                    nożną, ale na chwilę obecną wyłącznie jako kibic zza
+                    ekranu telewizora, oglądając swoją ulubioną <span class="section__important"><strong>FC Barcelonę
                         </strong></span>. Gra w tym wieku groziłaby zawałem 😅.
                 </p>
-                <p class="text">Poniżej zestawienie moich ulubionych zawodników (byłych i obecnych):</p>
+                <p class="section__text">Poniżej zestawienie moich ulubionych zawodników (byłych i obecnych):</p>
                 <div class="tableContainer">
                     <table class="table">
                         <caption class="table__caption"> Tab. 1. Moi ulubieni zawodnicy FC Barcelony </caption>
@@ -130,9 +132,9 @@
                                     alt="logo FC Barcelona"> FC Barcelona </td>
                     </table>
                 </div>
-                <h3 class="subSection">Sport - Disc golf</h3>
-                <h4 class="subSubSection">Jak grać?</h4>
-                <p class="text">Nie przypuszczałem, że w moim wieku kiedykolwiek pzafacynuję się nowym sportem. Zmieniło
+                <h3 class="section__subHeader">Sport - Disc golf</h3>
+                <h4 class="section__subSubHeader">Jak grać?</h4>
+                <p class="section__text">Nie przypuszczałem, że w moim wieku kiedykolwiek zafascynuję się nowym sportem. Zmieniło
                     się to diametralnie odkąd usłyszałem o <i>disc golfie</i>.
                     W disc golf gra się podobnie jak w klasycznego golfa. Zamiast piłeczki i kijów, w naszej odmianie
                     gry, gracze używają latających dysków, nazywanych też Frisbee®. Generalnie reguły gry są analogiczne
@@ -144,10 +146,10 @@
                     lub „dołek”). Dołek może być – i zazwyczaj jest – jednym z wielu discgolfowych koszy, które
                     wyglądają tak:</p>
                 <div class="subHeader__imageContainer">
-                    <img class="subHeader__image" width="400" src="https://imgupload.pl/images/2022/11/16/discgolfbasket.jpg"
-                        alt="discgolfbasket">
+                    <img class="subHeader__image" width="400"
+                        src="https://imgupload.pl/images/2022/11/16/discgolfbasket.jpg" alt="discgolfbasket">
                 </div>
-                <p class="text">W trakcie gry – zanim gracz zaliczy kolejny dołek, każdy kolejny rzut rozpoczyna
+                <p class="section__text">W trakcie gry – zanim gracz zaliczy kolejny dołek, każdy kolejny rzut rozpoczyna
                     dokładnie z tego miejsca, w które spadł dysk w wyniku poprzedniego rzutu. Drzewa, krzewy czy
                     nierówności terenu na polu do disc golfa, stanowią naturalne, wymagające przeszkody dla golfisty. Po
                     kilku (lub kilkunastu:-)) próbach, w końcu gracz wykonuje ostatni rzut (najczęściej wykorzystując do
@@ -171,77 +173,79 @@
                     disc golfa. Promuje sport poprzez uczestnictwo graczy, organizację turniejów, udział widzów,
                     kontrolę zasad i standardów konkurencji oraz edukację publiczną i pomoc. Na całym świecie istnieje
                     obecnie ponad 8 tys. pól do disc golfa, praktycznie codziennie powstają kolejne.</p>
-                <h4 class="subSubSection">Rodzaje dysków</h4>
-                <p class="text">Wyróżniamy 3 rodzaje dysków:</p>
-                <p class="text"><strong>Putt & Approach:</strong> Dyski przeznaczone do puttowania oraz krótkich i
+                <h4 class="section__subSubHeader">Rodzaje dysków</h4>
+                <p class="section__text">Wyróżniamy 3 rodzaje dysków:</p>
+                <p class="section__text"><strong>Putt & Approach:</strong> Dyski przeznaczone do puttowania oraz krótkich i
                     średnio dalekich rzutów.</p>
-                <p class="text"><strong>Midrange:</strong> Dyski przeznaczone do rzutów na średnią odległość. Idealnie
+                <p class="section__text"><strong>Midrange:</strong> Dyski przeznaczone do rzutów na średnią odległość. Idealnie
                     sprawdzają się, gdy potrzebujemy więcej precyzji niż dystansu.</p>
-                <p class="text"><strong>Driver:</strong> Driver to dysk przeznaczony do pokonywania maksymalnych
+                <p class="section__text"><strong>Driver:</strong> Driver to dysk przeznaczony do pokonywania maksymalnych
                     dystansów. Jego budowa zapewnia szybkość i pokonywanie oporów powietrza podczas lotu. Wśród tej
                     grupy można podzielić dyski na <i>fairway driver</i> oraz <i>distance driver</i>.</p>
-                <p class="text">Profile dysków i ich przykładowe zdjęcia:</p>
+                <p class="section__text">Profile dysków i ich przykładowe zdjęcia:</p>
                 <div class="subHeader__imageContainer">
                     <img class="subHeader__image" width="700"
                         src="https://imgupload.pl/images/2022/11/16/discgolf-for-beginners.jpg" alt="discprofile">
                 </div>
                 <div class="subHeader__imageContainer">
-                    <img class="subHeader__image" width="700" src="https://imgupload.pl/images/2022/11/16/discs.jpg" alt="discs">
+                    <img class="subHeader__image" width="700" src="https://imgupload.pl/images/2022/11/16/discs.jpg"
+                        alt="discs">
                 </div>
-                <h4 class="subSubSection">Co oznaczają cyfry na dysku?</h4>
-                <div class="subHeader__imageContainer">
-                    <img class="subHeader__image" width="920" src="https://imgupload.pl/images/2022/11/16/discnumber.jpg"
-                        alt="discnumber">
-                    <p class="text">Są to parametry określające zachowanie się dysku w powietrzu oraz podpowiadające
+                <h4 class="section__subSubHeader">Co oznaczają cyfry na dysku?</h4>
+                
+                    <p class="section__text">Są to parametry określające zachowanie się dysku w powietrzu oraz podpowiadające
                         graczowi odpowiedni dobór dysku do konkretnego rzutu (etapu gry i sytuacji).</p>
-                    <p class="text"><strong>Speed (szybkość):</strong> mówi jak mocno powinieneś rzucić dysk, aby
+                        <div class="subHeader__imageContainer">
+                            <img class="subHeader__image" width="900"
+                                src="https://imgupload.pl/images/2022/11/16/discnumber.jpg" alt="discnumber">
+                    <p class="section__text"><strong>Speed (szybkość):</strong> mówi jak mocno powinieneś rzucić dysk, aby
                         osiągnął
                         swoją zaprojektowaną prędkość; ten parametr ma skalę 1-15 i osiąga najwyższe wartości w
                         przypadku
                         dysków distance driver (dyski o najostrzejszej krawędzi).</p>
-                    <p class="text"><strong>Glide (poślizg, szybowanie):</strong> mówi jak długo dysk pozostanie w
+                    <p class="section__text"><strong>Glide (poślizg, szybowanie):</strong> mówi jak długo dysk pozostanie w
                         powietrzu. Skala parametru: 1-7. Im wyższa wartość glide'u, tym dłużej dysk będzie leciał,
                         pokona
                         większy dystans, jednak kierunek lutu będzie mniej kontrolowany, tym bardziej w wietrznych
                         warunkach. Niska wartość glide'u oznacza, krótszy lot dysku, ale jednocześnie lepszą kontrolę
                         trajektorii jego lotu.</p>
-                    <p class="text"><strong>Turn (skręt):</strong> mówi jaka jest tendencja dysku do skręcania w lewo
+                    <p class="section__text"><strong>Turn (skręt):</strong> mówi jaka jest tendencja dysku do skręcania w lewo
                         lub
                         prawo, w zależności od rodzaju i siły rzutu. Turn ma nietypową skalę od +1 do -5. Dyski z
                         górnego
                         przedziału będą miały tendencję do lotu w lewo, natomiast mniejszy turn oznacza lot w prawo (w
                         przypadku rzutu praworęcznym backhandem). </p>
-                    <p class="text"><strong>Fade (opadanie):</strong> mówi jak bardzo dysk będzie skręcał w lewo pod
+                    <p class="section__text"><strong>Fade (opadanie):</strong> mówi jak bardzo dysk będzie skręcał w lewo pod
                         koniec
                         swojego lotu . Skala parametru: 0-5. Dyski z fade 0 będą opadać gładko i na wprost, natomiast z
                         fade
                         5 będą miały ostry, pionowy finisz w lewo (w przypadku rzutu praworęcznym backhandem).</p>
-                    <p class="text">Podsumowując, cyfry umieszczone na dysku lub w opisie dysku w sklepie, oznaczają:
+                    <p class="section__text">Podsumowując, cyfry umieszczone na dysku lub w opisie dysku w sklepie, oznaczają:
                     </p>
                     <div class="subHeader__imageContainer">
-                        <img class="subHeader__image" width="600" src="https://imgupload.pl/images/2022/11/16/discparametr.jpg"
-                            alt="parametrydisc">
+                        <img class="subHeader__image" width="600"
+                            src="https://imgupload.pl/images/2022/11/16/discparametr.jpg" alt="parametrydisc">
                     </div>
 
-                    <h3 class="subSection">Komputery</h3>
-                    <p class="text">Oprócz sportu, który pojawiał się u mnie od <i>najmłodszych</i> lat, interesuję się
+                    <h3 class="section__subHeader">Komputery</h3>
+                    <p class="section__text">Oprócz sportu, który pojawiał się u mnie od <i>najmłodszych</i> lat, interesuję się
                         komputerami, a
                         sczególnie ich
                         wnętrzem. Składanie, dopasowywanie, parametryzacja to coś co lubię najbardziej.</p>
-                    <h3 class="subSection">Książki</h3>
-                    <p class="text">Książki to ważna część mojego życia. Oprócz branżowej literatury, chętnie sięgam po
+                    <h3 class="section__subHeader">Książki</h3>
+                    <p class="section__text">Książki to ważna część mojego życia. Oprócz branżowej literatury, chętnie sięgam po
                         pozycje związane
                         z
                         historią
                         jak również i polityką.</p>
-                    <h3 class="subSection">Filmy</h3>
-                    <p class="text">Uwielbiam wieczorne seanse. Jestem zdania, że z każdego doświadczenia można
+                    <h3 class="section__subHeader">Filmy</h3>
+                    <p class="section__text">Uwielbiam wieczorne seanse. Jestem zdania, że z każdego doświadczenia można
                         wyciągnąć
                         dobrą lekcję i
                         tak
                         też traktuję prawie wszystkie oglądane filmy. </p>
-                    <h3 class="subSection">Muzyka</h3>
-                    <p class="text">Oczywiście nie mogę zapomniec o muzyce. Minęło wiele lat zanim znalazłem swój gust.
+                    <h3 class="section__subHeader">Muzyka</h3>
+                    <p class="section__text">Oczywiście nie mogę zapomniec o muzyce. Minęło wiele lat zanim znalazłem swój gust.
                         Mój
                         gust jest
                         bardzo
@@ -253,16 +257,16 @@
                                 src="https://play-lh.googleusercontent.com/UrY7BAZ-XfXGpfkeWg0zCCeo-7ras4DCoRalC_WXXWTK9q5b0Iw7B0YQMsVxZaNB7DM=w240-h480-rw"
                                 alt="Spotify"></a>.</p>
             </section>
-            <section id="zawodowo">
-                <h2 class="section">Zawodowo</h2>
-                <p class="text"> Zawodowo pracuję w sektorze bankowym. Nadzoruję pracę Działu IT, dbam również ochronę
+            <section class="section" id="zawodowo">
+                <h2 class="section__header">Zawodowo</h2>
+                <p class="section__text"> Zawodowo pracuję w sektorze bankowym. Nadzoruję pracę Działu IT, dbam również ochronę
                     danych osobowych. Odpowiadam za nadzorowanie nowych rozwiązań informatycznych, na których
                     opiera się cała infrastruktura. Na ogół moja praca polega na działalności doradczej i prowadzeniu
                     wsparcia informatycznego poprzez rozwiązywanie
                     problemów i pilnowanie aby nie doszło do zakłóceń w ciągłości pracy systemu.
                 </p>
                 <p>Moje obowiązki jako Inspektor Ochrony Danych to:</p>
-                <ol class="text" type="1">
+                <ol class="section__text" type="1">
                     <li>Informowanie oraz doradzanie administratorowi, podmiotowi przetwarzającemu oraz pracownikom,
                         którzy
                         wykonują jakiekolwiek operacje na danych osobowych o wszystkich obowiązkach z tym związanych.
@@ -281,7 +285,7 @@
                         oceny
                         skutków dla ochrony danych w następujących kwestiach:</li>
                 </ol>
-                <ul class="text">
+                <ul class="section__text">
                     <li>faktu, czy należy przeprowadzić ocenę skutków dla ochrony danych;</li>
                     <li>metodologii przeprowadzenia oceny skutków dla ochrony danych;</li>
                     <li>oceny, czy należy przeprowadzić wewnętrzną ocenę skutków dla ochrony danych, czy zlecić ją
