changed button class name

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     src="https://imgupload.pl/images/2022/06/08/my2.jpg" alt="with my wife">
             </div>
             <p>
-                <button class="header__button js-removeImageButton">Usuń zdjęcie</button>
+                <button class="header__button js-hideImageButton">Ukryj zdjęcie</button>
             </p>
         </header>
         <article>
